# librestream

./: .gitignore  Cargo.toml  README.md  todo.txt
datafiles/: data.json  settings.json
src/: guh.html  main.rs  metadataedit.rs  todo.txt  usercreation.rs
webpages/: block.js  guh.html  index.html  ip.json  login-page.html  settings.html  settings.js
webpages/blocked/: blockedpage.html
webpages/js/: index.js  login.js  settings.js
