[package]
name = "librestream"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server", "multipart"]}
json = { version = "0.12.4" }
dotenv = { version = "0.15.0" }
colored = { version = "3.0.0" }
multer = { version = "3.1.0" }
futures-util = "0.3.31"