[package]
name = "librestream"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
warp = { version = "0.4.2", features = ["server", "multipart"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = { version = "1.0.143" }
dotenv = { version = "0.15.0" }
colored = { version = "3.0.0" }
multer = { version = "3.1.0" }
futures-util = { version = "0.3.31" }
futures = { version = "0.3.31" }
mime = { version = "0.3.17" }
log = { version = "0.4.28" }
uuid = { version = "1.18.1", features = ["v4"] }
random-string = { version = "1.1.0" }
env_logger = { version = "0.11.8" }
chrono = { version = "0.4.42" }
ftail = { version = "0.3.0" }
dotenvy = { version = "0.15.7" }
multitag = { version = "0.4.2" }
reqwest = { version = "0.12.23" }